--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div>
             <h1>Abdul Fattah Nizamani/h1>
             <h3>Contact</h3>
-            <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=abdulfattahnizamani266@gmail.com                ">Email Us</a></p>
-            <p>Linkedin: <a href="https://linkedin.com/in/abdul-fattah-nizamani-9863b52a3">Linkedin Account</a></p>
-            <p>GitHub: <a href="https://github.com/abdulfattahnizamani">Github Account</a></p>
+            <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=abdulfattahnizamani266@gmail.com                " target="_blank">Email Us</a></p>
+            <p>Linkedin: <a href="https://linkedin.com/in/abdul-fattah-nizamani-9863b52a3" target="_blank">Linkedin Account</a></p>
+            <p>GitHub: <a href="https://github.com/abdulfattahnizamani" target="_blank">Github Account</a></p>
         </div>
 
         <table>
