--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <div>
-            <h1>Abdul Fattah Nizamani/h1>
+            <h1>Abdul Fattah Nizamani</h1>
             <h3>Contact</h3>
             <p>Email: <a href="https://mail.google.com/mail/?view=cm&fs=1&to=abdulfattahnizamani266@gmail.com                " target="_blank">Email Us</a></p>
             <p>Linkedin: <a href="https://linkedin.com/in/abdul-fattah-nizamani-9863b52a3" target="_blank">Linkedin Account</a></p>
